--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.8.11",
+    "react-simple-image-slider": "^1.0.2",
     "unirest": "^0.6.0"
   }
 }
