--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "node-sass": "^4.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
