--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "dependencies": {
     "axios": "^0.19.2",
     "express": "^4.16.3",
+    "googleapis": "^39.2.0",
     "if-env": "^1.0.4",
     "mongoose": "^5.8.11",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "unirest": "^0.6.0"
   }
 }
