--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.8.11",
-    "react-responsive-carousel": "^3.1.51",
-    "react-simple-image-slider": "^1.0.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-slick": "^0.25.2",
+    "slick-carousel": "^1.8.1",
     "unirest": "^0.6.0"
   }
 }
