--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "express": "^4.16.3",
+    "express-session": "^1.17.0",
     "googleapis": "^39.2.0",
     "if-env": "^1.0.4",
     "mongoose": "^5.8.11",
