--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "jquery": "^3.4.1",
     "mongoose": "^5.8.11",
+    "popper.js": "^1.16.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1",
