--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1",
     "unirest": "^0.6.0"
