--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.8.11",
     "popper.js": "^1.16.1",
     "react": "^16.12.0",
