--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,12 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "bootstrap": "^4.4.1",
+    "node-sass": "^4.13.1",
     "react": "^16.6.3",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.6.3",
-    "react-scripts": "^2.1.1",
-    "node-sass": "^4.13.1"
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
