--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bcrypt": "^3.0.8",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "express": "^4.16.3",
     "express-flash": "0.0.2",
