--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
     "mongoose": "^5.8.11",
+    "openurl": "^1.1.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "popper.js": "^1.16.1",
+    "query-string": "^6.11.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
