--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
     "mongoose": "^5.8.11",
+    "open": "^7.0.2",
     "openurl": "^1.1.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
